sample/web-small.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    tier: web
    monitoring: "fpm"
spec:
  selector:
    app: web
    tier: web
  ports:
  - name: web 
    protocol: TCP
    port: 80
    targetPort: 80
  - name: php
    protocol: TCP
    port: 9000
    targetPort: 9000
  - name: fpm-metric
    port: 9253
    targetPort: 9253
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    tier: web
    exporter: "fpm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      tier: web
  template:
    metadata:
      labels:
        app: web
        tier: web
    spec:
      volumes:
      - name: app-staging
        nfs:
          server: 10.130.226.136
          path: /
      - name: app-tmp
        emptyDir: {}
      - name: app-runtime
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: nginx-config
          items:
          - key: config
            path: default.conf
      - name: fpm-config
        configMap:
          name: fpm-config
          items:
          - key: config
            path: www.conf      
      - name: fluentbit-config
        configMap:
          name: fluentbit-config
          items:
          - key: config
            path: fluent-bit.conf
      - name: nginx-config
        configMap:
          name: nginx-config
          items:
          - key: config
            path: default.conf
      containers:
      - name: nginx
        image: registry.digitalocean.com/geschool/nginx-php:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        resources:
          requests:
            cpu: "10m"
      - name : php
        image: registry.digitalocean.com/geschool/php:latest
        resources:
          requests:
            cpu: "100m"
        livenessProbe:
          exec:
            command:
              - "/fpm-check.sh"
          initialDelaySeconds: 5
          failureThreshold: 2

        volumeMounts:
        - name: app-staging
          mountPath: /var/www/html/protected/runtime/staging/
        - name: app-tmp
          mountPath: /var/www/html/tmp
        - name: app-runtime
          mountPath: /var/www/html/protected/runtime
        - name: fpm-config
          mountPath: /opt/bitnami/php/etc/php-fpm.d
      - name: fluentbit
        image: bitnami/fluent-bit:latest
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "50m"
        volumeMounts:
        - name: app-tmp
          mountPath: /var/www/html/tmp
        - name: fluentbit-config
          mountPath: /opt/bitnami/fluent-bit/conf/
