sample/sample.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: sample
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test.geschool.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
